--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -4,7 +4,7 @@
   .field
     = f.label :nickname
     %br/
-    = f.email_field :nickname, autofocus: true
+    = f.text_field :nickname, autofocus: true
   .field
     = f.label :email
     %br/
