同期通信で持ってこられるデータは表示できるようにしました。

--- a/app/views/first_rounds/new.html.haml
+++ b/app/views/first_rounds/new.html.haml
@@ -12,7 +12,7 @@
       相手チーム
       = f.select :opponent, @FirstRoundTeams
       マネージャー
-      = f.select :manager, @managers
+      = f.select :supporter, @managers
       掘杉くん人形
       = f.select :horisugi_doll do
         %option 有
