--- a/app/views/first_rounds/score.html.haml
+++ b/app/views/first_rounds/score.html.haml
@@ -23,39 +23,39 @@
   試合内容
   = form_with url: record_player_first_rounds_path do |f|
     出場回：
-    = f.select :participation, @participation
+    = f.select :take_part_in, @participation, id: "participation", class "1st-game-data"
     得失点差：
-    = f.number_field :point_difference, id: "point_difference"
+    = f.number_field :point_difference, id: "point_difference", class "1st-game-data"
     失点：
-    = f.number_field :lost_point, id: "lost_point"
+    = f.number_field :lost_point, id: "lost_point", class "1st-game-data"
     ヒット：
-    = f.number_field :hit, id: "hit"
+    = f.number_field :hit, id: "hit", class "1st-game-data"
     二塁打：
-    = f.number_field :second_base_hit, id: "second_base_hit"
+    = f.number_field :second_base_hit, id: "second_base_hit", class "1st-game-data"
     三塁打：
-    = f.number_field :third_base_hit, id: "third_base_hit"
+    = f.number_field :third_base_hit, id: "third_base_hit", class "1st-game-data"
     本塁打：
-    = f.number_field :home_run, id: "home_run"
+    = f.number_field :home_run, id: "home_run", class "1st-game-data"
     犠打：
-    = f.number_field :sacrifice_bunt, id: "sacrifice_bunt"
+    = f.number_field :sacrifice_bunt, id: "sacrifice_bunt", class "1st-game-data"
     犠飛：
-    = f.number_field :sacrifice_fly, id: "sacrifice_fly"
+    = f.number_field :sacrifice_fly, id: "sacrifice_fly", class "1st-game-data"
     盗塁：
-    = f.number_field :steal, id: "steal"
+    = f.number_field :steal, id: "steal", class "1st-game-data"
     登板回数：
-    = f.number_field :pitch, id: "pitch"
+    = f.number_field :pitch, id: "pitch", class "1st-game-data"
     ストレート系アウト：
-    = f.number_field :straight_ball_out, id: "straight_ball_out"
+    = f.number_field :straight_ball_out, id: "straight_ball_out", class "1st-game-data"
     変化球系アウト：
-    = f.number_field :change_ball_out, id: "change_ball_out"
+    = f.number_field :change_ball_out, id: "change_ball_out", class "1st-game-data"
     奪三振：
-    = f.number_field :strike_out, id: "strike_out"
+    = f.number_field :strike_out, id: "strike_out", class "1st-game-data"
     フライ／ライナーアウト：
-    = f.number_field :fly_liner_out, id: "fly_liner_out"
+    = f.number_field :fly_liner_out, id: "fly_liner_out", class "1st-game-data"
     ゴロアウト：
-    = f.number_field :roller, id: "roller"
+    = f.number_field :roller, id: "roller", class "1st-game-data"
     併殺：
-    = f.number_field :double_play, id: "double_play"
+    = f.number_field :double_play, id: "double_play", class "1st-game-data"
 %br
 .first-round-score-point
   .muscle
