非同期通信で獲得ポイントを表示できるようにしました。

--- a/app/views/first_rounds/score.html.haml
+++ b/app/views/first_rounds/score.html.haml
@@ -21,99 +21,63 @@
 %br
 .first-round-score-score
   試合内容
-  = form_with url: record_player_first_rounds_path do |f|
+  = form_with url: record_player_first_rounds_path, id: "1st-game-data" do |f|
     出場回：
-    = f.select :take_part_in, @participation, id: "participation", class "1st-game-data"
+    = f.select :take_part_in, @participation, {}, {id: "participation", class: "1st-game-data"}
     得失点差：
-    = f.number_field :point_difference, id: "point_difference", class "1st-game-data"
+    = f.number_field :point_difference, id: "point_difference", class: "1st-game-data", value: 0
     失点：
-    = f.number_field :lost_point, id: "lost_point", class "1st-game-data"
+    = f.number_field :lost_point, id: "lost_point", class: "1st-game-data", value: 0
     ヒット：
-    = f.number_field :hit, id: "hit", class "1st-game-data"
+    = f.number_field :hit, id: "hit", class: "1st-game-data", value: 0
     二塁打：
-    = f.number_field :second_base_hit, id: "second_base_hit", class "1st-game-data"
+    = f.number_field :second_base_hit, id: "second_base_hit", class: "1st-game-data", value: 0
     三塁打：
-    = f.number_field :third_base_hit, id: "third_base_hit", class "1st-game-data"
+    = f.number_field :third_base_hit, id: "third_base_hit", class: "1st-game-data", value: 0
     本塁打：
-    = f.number_field :home_run, id: "home_run", class "1st-game-data"
+    = f.number_field :home_run, id: "home_run", class: "1st-game-data", value: 0
     犠打：
-    = f.number_field :sacrifice_bunt, id: "sacrifice_bunt", class "1st-game-data"
+    = f.number_field :sacrifice_bunt, id: "sacrifice_bunt", class: "1st-game-data", value: 0
     犠飛：
-    = f.number_field :sacrifice_fly, id: "sacrifice_fly", class "1st-game-data"
+    = f.number_field :sacrifice_fly, id: "sacrifice_fly", class: "1st-game-data", value: 0
     盗塁：
-    = f.number_field :steal, id: "steal", class "1st-game-data"
+    = f.number_field :steal, id: "steal", class: "1st-game-data", value: 0
     登板回数：
-    = f.number_field :pitch, id: "pitch", class "1st-game-data"
+    = f.number_field :pitch, id: "pitch", class: "1st-game-data", value: 0
     ストレート系アウト：
-    = f.number_field :straight_ball_out, id: "straight_ball_out", class "1st-game-data"
+    = f.number_field :straight_ball_out, id: "straight_ball_out", class: "1st-game-data", value: 0
     変化球系アウト：
-    = f.number_field :change_ball_out, id: "change_ball_out", class "1st-game-data"
+    = f.number_field :change_ball_out, id: "change_ball_out", class: "1st-game-data", value: 0
     奪三振：
-    = f.number_field :strike_out, id: "strike_out", class "1st-game-data"
+    = f.number_field :strike_out, id: "strike_out", class: "1st-game-data", value: 0
     フライ／ライナーアウト：
-    = f.number_field :fly_liner_out, id: "fly_liner_out", class "1st-game-data"
+    = f.number_field :fly_liner_out, id: "fly_liner_out", class: "1st-game-data", value: 0
     ゴロアウト：
-    = f.number_field :roller, id: "roller", class "1st-game-data"
+    = f.number_field :roller, id: "roller", class: "1st-game-data", value: 0
     併殺：
-    = f.number_field :double_play, id: "double_play", class "1st-game-data"
-%br
-.first-round-score-point
-  .muscle
-    筋力ポイント：
-    .muscle__base_point
-      ベースポイント：
-      = @muscle_base_point
-    .muscle__action_point
-      行動ポイント：
-      = @muscle_action_point
-    .muscle__action_point
-      合計ポイント
-      = @muscle_total_point
-  %br
-  .agile
-    敏捷ポイント：
-    .agile__base_point
-      ベースポイント：
-      = @agile_base_point
-    .agile__action_point
-      行動ポイント：
-      = @agile_action_point
-    .agile__total_point
-      合計ポイント
-      = @agile_total_point
-  %br
-  .technique
-    技術ポイント：
-    .technique__base_point
-      ベースポイント：
-      = @technique_base_point
-    .technique__action_point
-      行動ポイント：
-      = @technique_action_point
-    .technique__total_point
-      合計ポイント
-      = @technique_total_point
-  %br
-  .change
-    変化球ポイント：
-    .change__base_point
-      ベースポイント：
-      = @change_base_point
-    .change__action_point
-      行動ポイント：
-      = @change_action_point
-    .change__total_point
-      合計ポイント
-      = @change_total_point
-  %br
-  .spirit
-    精神ポイント：
-    .spirit__base_point
-      ベースポイント：
-      = @spirit_base_point
-    .spirit__action_point
-      行動ポイント：
-      = @spirit_action_point
-    .spirit__total_point
-      合計ポイント
-      = @spirit_total_point
+    = f.number_field :double_play, id: "double_play", class: "1st-game-data", value: 0
+    - if @supporter == "我間摩夕"
+      お言いつけ
+      = f.select :wagama_order, {}, {id: "wagama_order", class: "1st-game-data"} do
+        %option 成功
+        %option 失敗
+
+    .get-point
+      獲得ポイント
+      .get-point__muscle
+        筋力ポイント
+        = f.text_field :muscle, id: "muscle-point", value: 0
+      .get-point__agile
+        敏捷ポイント
+        = f.text_field :agile, id: "agile-point", value: 0
+      .get-point__technique
+        技術ポイント
+        = f.text_field :technique, id: "technique-point", value: 0
+      .get-point__change
+        変化球ポイント
+        = f.text_field :change, id: "change-point", value: 0
+      .get-point__spirit
+        精神ポイント
+        = f.text_field :spirit, id: "spirit-point", value: 0
+    .game-max
+    = f.submit :"試合終了"
