--- a/app/views/first_rounds/new.html.haml
+++ b/app/views/first_rounds/new.html.haml
@@ -13,6 +13,11 @@
       = f.select :opponent, @FirstRoundTeams
       マネージャー
       = f.select :supporter, @managers
+      マネージャーの機嫌
+      = f.select :supporter_mood do
+        %option ★☆☆
+        %option ★★☆
+        %option ★★★
       掘杉くん人形
       = f.select :horisugi_doll do
         %option 有
