--- a/app/views/third_rounds/new.html.haml
+++ b/app/views/third_rounds/new.html.haml
@@ -1,1 +1,32 @@
-hello world
+.round-wrap
+  3回線
+  ユーザー名
+  = current_user.nickname
+  選手名
+  = @player.name
+  レベル
+  = @player.level
+  .round-wrap__content
+    試合前設定
+    = form_with url: player_third_rounds_path(@player), method: :post do |f|
+      相手チーム
+      = f.select :opponent, @RoundTeams
+      マネージャー
+      = f.select :supporter, @managers
+      マネージャーの機嫌
+      = f.select :supporter_mood do
+        %option ★☆☆
+        %option ★★☆
+        %option ★★★
+      掘杉くん人形
+      = f.select :horisugi_doll do
+        %option 有
+        %option 無
+      天気
+      = f.select :climate do
+        - if @secondclimate == "台風"
+          %option 晴れ
+        - else
+          %option 晴れ
+          %option 台風
+      = f.submit :"設定する"
