4回戦の天候で、2,3回で両方ともに晴れだった場合、台風しか選択できないようにしました。

--- a/app/views/fourth_rounds/new.html.haml
+++ b/app/views/fourth_rounds/new.html.haml
@@ -26,6 +26,8 @@
       = f.select :climate do
         - if @secondclimate == "台風" || @thirdclimate == "台風"
           %option 晴れ
+        - elsif @secondclimate == "晴れ" && @thirdclimate == "晴れ"
+          %option 台風
         - else
           %option 晴れ
           %option 台風
