--- a/app/views/total_records/new.html.haml
+++ b/app/views/total_records/new.html.haml
@@ -1,5 +1,15 @@
 .total-record
   結果
+.total-record__info
+  選手登録情報
+  .total-record__info__name
+    選手名：
+    = @name
+  .total-record__info__dominant
+    = "#{@throw}投#{@batting}打"
+  .total-record__info__position
+    ポジション：
+    = @position
   %table
     %tr
       %th
