--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -1,9 +1,13 @@
 .wrapper
   .wrapper__top
-    = link_to new_user_registration_path, class:"new_user_registration" do
-      新規登録
-    = link_to new_user_session_path, class:"new_user_session" do
-      ログイン
+    - unless user_signed_in?
+      = link_to new_user_registration_path, class:"new_user_registration" do
+        新規登録
+      = link_to new_user_session_path, class:"new_user_session" do
+        ログイン
+    - if user_signed_in?
+      = link_to destroy_user_session_path, class:"destroy_user_session" do
+        ログアウト
   .wrapper__content
     パワフェス
     .game_start
