--- a/app/views/users/method.html.haml
+++ b/app/views/users/method.html.haml
@@ -98,3 +98,4 @@
       .wrapper__back__content__button
         = link_to root_path, class: "return_home" do
           ホームに戻る
+  .wrapper__restback
