新規登録、ログイン画面のマークアップをしました。

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2,3 +2,5 @@
 @import "config/variable";
 @import "user/user_method";
 @import "user/user_index";
+@import "devise/new";
+@import "devise/log-in";
