--- a/app/assets/stylesheets/user/user_index.scss
+++ b/app/assets/stylesheets/user/user_index.scss
@@ -35,6 +35,63 @@
       background-color: #1CD2FF;
     }
   }
+  &__box2{
+    margin: 20px 0;
+    @include middle_located();
+    &__table{
+      width: 600px;
+      &__row{
+        &__number{
+          @include table_element();
+        }
+        &__name{
+          @include table_element();
+        }
+        &__position{
+          @include table_element();
+        }
+        &__dominant{
+          @include table_element();
+        }
+        &__button{
+          @include table_element();
+        }
+        &__num-ele{
+          @include table_record();
+        }
+        &__name-ele{
+          @include table_record();
+        }
+        &__posi-ele{
+          @include table_record();
+        }
+        &__domi-ele{
+          @include table_record();
+        }
+        &__show-button{
+          @include table_record();
+          .show-button{
+            @include delete_link_white();
+            color: #1BBBFB;
+            translate: color;
+          }
+          .show-button:hover{
+            color: #127AA3;
+          }
+        }
+        &__delete-button{
+          @include table_record();
+          .delete-button{
+            @include delete_link_white();
+            color: #D65F4C;
+          }
+          .delete-button:hover{
+            color: #A21C17;
+          }
+        }
+      }
+    }
+  }
 }
 
 .wrapper__restback{
