users#buttonのcssを変更しました。

--- a/app/views/players/new.html.haml
+++ b/app/views/players/new.html.haml
@@ -1,3 +1,16 @@
+.wrapper
+  .wrapper__top
+    .wrapper__top__box
+      .wrapper__top__box__text
+        パワフェス " 極 "
+        .wrapper__top__box__text__sub
+          〜最強選手を作ろう〜
+  .wrapper__back
+    .wrapper__back__content
+      .wrapper__back__content__top
+        〜 選手登録 〜
+      .wrapper__back__content__box
+
 .new-player-wrapper
   新規登録
   .new-player-wrapper__registration
