--- a/app/assets/stylesheets/user/user_index.scss
+++ b/app/assets/stylesheets/user/user_index.scss
@@ -3,9 +3,9 @@
     margin: 20px 0;
     text-align: center;
     &__method{
-      width: 400px;
+      width: 500px;
+      line-height: 35px;
       margin:0 auto 15px auto;
-      padding: 5px 50px;
       color: #1BBBFB;
       border: solid 1px #1BBBFB;
       border-radius: 30px;
@@ -20,9 +20,9 @@
       background-color: rgba(28,200,255,0.3);
     }
     &__start{
-      width: 400px;
+      width: 500px;
+      line-height: 35px;
       margin: 15px auto 0 auto;
-      padding: 5px 50px;
       color: #FFFFFF;
       background-color: #1BBBFB;
       border-radius: 30px;
